src/routes/solid-start/v1/reference/server/use-server.mdx
---
title: '"use server"'
use_cases: >-
  server functions, server-only functions, server references
tags:
  - server
  - directive
  - functions
version: "1.0"
description: >-
  "use server" marks server functions for the server function compiler.
---

`"use server"` is the directive string recognized by the server functions compiler.

## Import

No import is required for the directive.

## Type

```tsx
const DIRECTIVE = "use server";
```

## Parameters

The directive has no parameters.

## Return value

The directive does not return a value.

## Behavior

- The compiler uses `"use server"` as its directive string.
- In client builds, transformed server references use the configured client runtime.
- SSR and server-function builds use the configured server runtime for transformed server references.
- Valid transformed modules are added to the server function manifest.

## Examples

### Function directive

```tsx
const logMessage = async (message: string) => {
	"use server";
	console.log(message);
};
```

### File directive

```tsx
"use server";

export async function logMessage(message: string) {
	console.log(message);
}
```

## Related

- [`getServerFunctionMeta`](/solid-start/v1/reference/server/get-server-function-meta)
