src/routes/solid-start/v2/reference/server/use-server.mdx
---
title: '"use server"'
use_cases: >-
  server functions, server-only functions, server references
tags:
  - server
  - directive
  - functions
version: "2.0"
description: >-
  "use server" marks server functions for the server function compiler.
---

`"use server"` is the directive string recognized by the server function compiler.

## Import

No import is required for the directive.

## Type

```tsx
const DIRECTIVE = "use server";
```

## Parameters

The directive has no parameters.

## Return value

The directive does not return a value.

## Behavior

- The compiler uses `"use server"` as its directive string.
- Client builds transform server references with the configured client runtime.
- SSR and server-function builds use the configured server runtime for transformed references.
- Valid transformed modules are added to the server function manifest.

## Examples

### Function directive

```tsx
const logMessage = async (message: string) => {
	"use server";
	console.log(message);
};
```

### File directive

```tsx
"use server";

export async function logMessage(message: string) {
	console.log(message);
}
```

:::note[Using with query]
When wrapping a server function with [`query`](/solid-router/reference/data-apis/query), place `"use server"` inside the inner function rather than at the file level. A file-level directive turns the whole module — including the `query` wrapper that also runs on the client — into a server reference.

```tsx
export const logMessage = query(async (message: string) => {
	"use server";
	console.log(message);
}, "log-message");
```

:::

## Related

- [`getServerFunctionMeta`](/solid-start/v2/reference/server/get-server-function-meta)
